--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,58 @@ p {
 font-family: sans-serif;
 color: #0000FF;
 }
+
+
+header {
+      overflow: clear;
+      position: relative;
+    }
+    h2 {
+      font-family: 'PT Sans Narrow', sans-serif;
+      font-size: 18px;
+      font-weight: 700;
+      margin: 0 0 10px;
+      text-align: center;
+    }
+    button {
+      position: absolute;
+      top: -4px;
+    }
+    button:first-child {
+      left: 0;
+    }
+    button:last-child {
+      right: 0;
+    }
+
+
+table {
+      background: #fff;
+      border-collapse: collapse;
+      color: #222;
+      font-family: 'PT Sans', sans-serif;
+      font-size: 13px;
+      width: 100%;
+    }
+td {
+ 	border: 1px solid #ccc;
+    color: #444;
+    line-height: 22px;
+    text-align: center;
+}
+tr:first-child td {
+    color: #222;
+    font-weight: 700;
+}
+
+.selected {
+      background: #f0951d;
+      border: 0;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, .5) inset;
+    }
+
+
+
 #awesomeText { font-family: 'Times New Roman', Georgia, Serif; }
 .soft { color: #a8a8a8; }
 .center { text-align: center; }
