--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ color: #0000FF;
 
 
 header {
-	  color: gray;
+	  background-color: gray;
       overflow: visible;
       position: relative;
     }
